@@ -151,10 +151,13 @@ sub has_help
 	my $dom = $self->{config}->{field}->render_help(
 		$self->{session},
 		$self->{config}->{field}->get_type() );
+
 	if( EPrints::XML::is_empty( $dom ) )
 	{
 		return 0;
 	}
+
+	EPrints::XML::dispose( $dom );
 	return 1;
 }
 
